--- a/src/app/item-view/item-view.component.html
+++ b/src/app/item-view/item-view.component.html
@@ -3,13 +3,15 @@
     <div class="w-100 px-3 px-sm-4 px-md-5 content-items py-5">
         <app-item 
             itemName="item1"
-            *ngFor="let item of items"
+            *ngFor="let item of items; let i = index"
             [itemName]="item.name"
             [itemDescription]="item.description"
-            [color]="item.color ? 'success' : 'infos' "
+            [active]="item.active"
+            [index]="i"
         ></app-item>
     </div>
     <div class="w-100 d-flex justify-content-end align-items-center pr-4">
-        <button class="btn-danger btn" [disabled]="!isAuth" (click)="allDelete()"> All delete </button>
+        <button class="btn-success btn mr-3" [disabled]="isAllActived()" (click)="allActived()"> active all </button>
+        <button class="btn-danger btn" [disabled]="isAllDesactived()" (click)="allDesactived()"> desactive all </button>
     </div>
 </div>
