--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -7,3 +7,10 @@
     box-shadow: none !important;
     border-color: #DDDDDD !important;
 }
+
+.status{
+    width: 15px;
+    height: 15px;
+    border-radius: 100%;
+    background-color: #000000;
+}
