--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
 <div class="w-100 h-100 position-absolute content-page d-flex flex-column">
-    <div class="w-100 bg-success text-center py-5 text-white header"> Welcome !! </div>
-    <app-item-view></app-item-view>
+    <div class="w-100 bg-success py-5 text-white header d-flex flex-column justify-content-center align-items-center"> 
+        <div class="container-fluid d-flex align-items-center menu">
+            <div class="d-flex">
+                <a routerLink="auth" class="text-white px-3"> Authentification </a>
+            </div>
+            <div class="d-flex">
+                <a routerLink="items" class="text-white px-3"> Items list </a>
+            </div>
+        </div>
+        <span class="py-3 pt-5"> Welcome !!  </span>
+    </div>
+    <router-outlet></router-outlet>
 </div>
