--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,9 @@
     font-size: 2.5em;
     letter-spacing: 0.15em;
 }
+
+.header div,
+.header a{
+    font-size: 0.9em !important;
+    text-decoration: none !important;
+}
