--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
             <div class="d-flex">
                 <a routerLink="items" class="text-white px-3"> Items list </a>
             </div>
+            <div class="d-flex">
+                <a routerLink="add" class="text-white px-3"> Add item </a>
+            </div>
         </div>
         <span class="py-3 pt-5"> Welcome !!  </span>
     </div>
