--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,1 +1,3 @@
-<p>auth works!</p>
+<div class="container-fluid content-button d-flex py-5">
+    <div class="btn btn-success px-3 py-2" (click)="move()"> Connection </div>
+</div>
